{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 29,
  "lineage": "b09df51d-56f6-67fe-b233-25756c27bdcd",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095a1e18f4b71dce2",
            "arn": "arn:aws:ec2:us-east-1:725510651649:elastic-ip/eipalloc-095a1e18f4b71dce2",
            "domain": "vpc",
            "id": "eipalloc-095a1e18f4b71dce2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-13-219-34-32.compute-1.amazonaws.com",
            "public_ip": "13.219.34.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-eip-nat-1",
              "Project": "domain-join-automation",
              "Type": "ElasticIP"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-eip-nat-1",
              "Project": "domain-join-automation",
              "Type": "ElasticIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bce6d9d4b8d8f40",
            "arn": "arn:aws:ec2:us-east-1:725510651649:elastic-ip/eipalloc-02bce6d9d4b8d8f40",
            "domain": "vpc",
            "id": "eipalloc-02bce6d9d4b8d8f40",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-210-210-106.compute-1.amazonaws.com",
            "public_ip": "44.210.210.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-eip-nat-2",
              "Project": "domain-join-automation",
              "Type": "ElasticIP"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-eip-nat-2",
              "Project": "domain-join-automation",
              "Type": "ElasticIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae882ce93544d55d",
            "arn": "arn:aws:ec2:us-east-1:725510651649:elastic-ip/eipalloc-0ae882ce93544d55d",
            "domain": "vpc",
            "id": "eipalloc-0ae882ce93544d55d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-83-73-202.compute-1.amazonaws.com",
            "public_ip": "98.83.73.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-eip-nat-3",
              "Project": "domain-join-automation",
              "Type": "ElasticIP"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-eip-nat-3",
              "Project": "domain-join-automation",
              "Type": "ElasticIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:internet-gateway/igw-06cd8416caae8ecb1",
            "id": "igw-06cd8416caae8ecb1",
            "owner_id": "725510651649",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-igw",
              "Project": "domain-join-automation",
              "Type": "InternetGateway"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-igw",
              "Project": "domain-join-automation",
              "Type": "InternetGateway"
            },
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095a1e18f4b71dce2",
            "association_id": "eipassoc-0e7079ef10e055b28",
            "connectivity_type": "public",
            "id": "nat-01d8502969f27c851",
            "network_interface_id": "eni-0fb1fdb7b6ae1ef9d",
            "private_ip": "10.0.1.50",
            "public_ip": "13.219.34.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07d752a260f8454fe",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-nat-1",
              "Project": "domain-join-automation",
              "Type": "NATGateway"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-nat-1",
              "Project": "domain-join-automation",
              "Type": "NATGateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bce6d9d4b8d8f40",
            "association_id": "eipassoc-0652f886db5537d14",
            "connectivity_type": "public",
            "id": "nat-015188e6aa8cf473d",
            "network_interface_id": "eni-02021c643a001e7f5",
            "private_ip": "10.0.2.40",
            "public_ip": "44.210.210.106",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f9d3b7c007bdb25e",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-nat-2",
              "Project": "domain-join-automation",
              "Type": "NATGateway"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-nat-2",
              "Project": "domain-join-automation",
              "Type": "NATGateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae882ce93544d55d",
            "association_id": "eipassoc-0324c6a8ec96d5ca5",
            "connectivity_type": "public",
            "id": "nat-0efae91b2b1f63e3a",
            "network_interface_id": "eni-02d3f78113c76f2ca",
            "private_ip": "10.0.3.18",
            "public_ip": "98.83.73.202",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-061044a61588cd2f2",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-nat-3",
              "Project": "domain-join-automation",
              "Type": "NATGateway"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-nat-3",
              "Project": "domain-join-automation",
              "Type": "NATGateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:route-table/rtb-07b3b1467ee1d1991",
            "id": "rtb-07b3b1467ee1d1991",
            "owner_id": "725510651649",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01d8502969f27c851",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-rt-private-1",
              "Project": "domain-join-automation",
              "Type": "RouteTable"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-rt-private-1",
              "Project": "domain-join-automation",
              "Type": "RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:route-table/rtb-05b8ce6a7db371352",
            "id": "rtb-05b8ce6a7db371352",
            "owner_id": "725510651649",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-015188e6aa8cf473d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-rt-private-2",
              "Project": "domain-join-automation",
              "Type": "RouteTable"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-rt-private-2",
              "Project": "domain-join-automation",
              "Type": "RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:route-table/rtb-0dee6829b15c3174f",
            "id": "rtb-0dee6829b15c3174f",
            "owner_id": "725510651649",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0efae91b2b1f63e3a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-rt-private-3",
              "Project": "domain-join-automation",
              "Type": "RouteTable"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-rt-private-3",
              "Project": "domain-join-automation",
              "Type": "RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:route-table/rtb-089e19ad5d81fb2cb",
            "id": "rtb-089e19ad5d81fb2cb",
            "owner_id": "725510651649",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cd8416caae8ecb1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-rt-public",
              "Project": "domain-join-automation",
              "Type": "RouteTable"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-rt-public",
              "Project": "domain-join-automation",
              "Type": "RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9041701b7cf154d",
            "route_table_id": "rtb-07b3b1467ee1d1991",
            "subnet_id": "subnet-095e8c8c249dd780a"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d50bc0a9679dc7d",
            "route_table_id": "rtb-05b8ce6a7db371352",
            "subnet_id": "subnet-0c097d442f86873fb"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013b8e10ecfe82e93",
            "route_table_id": "rtb-0dee6829b15c3174f",
            "subnet_id": "subnet-081fbe3b23f1c475d"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ce57859fb8e25b9",
            "route_table_id": "rtb-089e19ad5d81fb2cb",
            "subnet_id": "subnet-07d752a260f8454fe"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9bb6164a7f0eb56",
            "route_table_id": "rtb-089e19ad5d81fb2cb",
            "subnet_id": "subnet-0f9d3b7c007bdb25e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d46353f7f10094d9",
            "route_table_id": "rtb-089e19ad5d81fb2cb",
            "subnet_id": "subnet-061044a61588cd2f2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:subnet/subnet-095e8c8c249dd780a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095e8c8c249dd780a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725510651649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-private-1",
              "Project": "domain-join-automation",
              "Type": "PrivateSubnet"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-private-1",
              "Project": "domain-join-automation",
              "Type": "PrivateSubnet"
            },
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:subnet/subnet-0c097d442f86873fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c097d442f86873fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725510651649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-private-2",
              "Project": "domain-join-automation",
              "Type": "PrivateSubnet"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-private-2",
              "Project": "domain-join-automation",
              "Type": "PrivateSubnet"
            },
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:subnet/subnet-081fbe3b23f1c475d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081fbe3b23f1c475d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "725510651649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1c",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-private-3",
              "Project": "domain-join-automation",
              "Type": "PrivateSubnet"
            },
            "tags_all": {
              "AZ": "us-east-1c",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-private-3",
              "Project": "domain-join-automation",
              "Type": "PrivateSubnet"
            },
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:subnet/subnet-07d752a260f8454fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d752a260f8454fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725510651649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-public-1",
              "Project": "domain-join-automation",
              "Type": "PublicSubnet"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-public-1",
              "Project": "domain-join-automation",
              "Type": "PublicSubnet"
            },
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:subnet/subnet-0f9d3b7c007bdb25e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9d3b7c007bdb25e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725510651649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-public-2",
              "Project": "domain-join-automation",
              "Type": "PublicSubnet"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-public-2",
              "Project": "domain-join-automation",
              "Type": "PublicSubnet"
            },
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:subnet/subnet-061044a61588cd2f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061044a61588cd2f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "725510651649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1c",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-public-3",
              "Project": "domain-join-automation",
              "Type": "PublicSubnet"
            },
            "tags_all": {
              "AZ": "us-east-1c",
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-public-3",
              "Project": "domain-join-automation",
              "Type": "PublicSubnet"
            },
            "vpc_id": "vpc-00103e1fef8610cc4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725510651649:vpc/vpc-00103e1fef8610cc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9328a1de1402d24",
            "default_route_table_id": "rtb-0e46530dd8f3be08b",
            "default_security_group_id": "sg-0070c2cb9c5c15a3f",
            "dhcp_options_id": "dopt-054eaaf5c00e4dacb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00103e1fef8610cc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e46530dd8f3be08b",
            "owner_id": "725510651649",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-vpc",
              "Project": "domain-join-automation",
              "Type": "VPC"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "domain-join-automation-dev-vpc",
              "Project": "domain-join-automation",
              "Type": "VPC"
            }
          }
        }
      ]
    }
  ]
}